@@ -11,6 +11,7 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 scenarios(simulator => 1);
 
 compile(
+    verilator_flags2 => ['-Wall -Wno-DECLFILENAME'],  # To check EOFNEWLINE with DOS CRs
     );
 
 execute(
